# SolarTwin_COV2

./: .env.example  .gitignore  =5.17  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  quick_start.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: python-expert.agent.md
.github/workflows/: ci.yml  release.yml
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/api/routers/: __init__.py  twin.py
apps/api/schemas/: __init__.py  twin.py
apps/dashboard/: api_client.py  charts.py  config.py  main.py  state.py  styles.py
apps/dashboard/charts/: iv.py  pv.py  theme.py  weather.py
apps/dashboard/components/: header.py  sidebar.py
data/panels/: canadian_hiku7_600.json  generic_poly_330.json  ja_solar_jam72d40_570.json  jinko_tiger_neo_580.json  longi_himo_x6_580.json  risen_rsm144_550.json  trina_vertex_splus_420.json
docs/: DASHBOARD_AUDIT_AND_IMPROVEMENTS.md  DASHBOARD_CHECKLIST.md  DASHBOARD_IMPLEMENTATION_GUIDE.md  DASHBOARD_QUICK_REFERENCE.md  DASHBOARD_STRATEGY.md  GITHUB_WORKFLOW.md  NOCT_MODEL_PHYSICS.md  PANEL_TIER1_SETUP.md  PR_REVIEW_CHECKLIST.md  SCIENCE_ROADMAP.md  SPRINT3_IMPROVEMENTS_ROADMAP.md
github/workflows/: ci.yml
tests/: smoke_test.py
tests/integration/: test_twin_api.py
tests/unit/: test_kpi_performance.py  test_panel_catalog.py  test_panel_params.py  test_single_diode.py  test_temperature.py
(+4 files in other folders)
