[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solartwin-co"
version = "0.1.0"
description = "Gemelo digital fotovoltaico para SolarTwin CO."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "numpy>=1.26",
    "NREL-PySAM>=7.1",
    "pandas>=2.2",
    "pydantic>=2.6",
    "pvlib>=0.11",
    "scipy>=1.12",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["packages/pv-twin/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requiere docker compose up -d"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pvlib.*"]
ignore_missing_imports = true

[tool.coverage.report]
fail_under = 85
show_missing = true
